# sigcraft

./: CMakeLists.txt  camera.cpp  chunk_mesh.cpp  chunk_mesh.h  main.cpp  threadpool.h  world.cpp  world.h
enklume/: CMakeLists.txt
enklume/include/enklume/: block_data.h  chunk.h  enklume.h
enklume/src/: block_data.c  chunk.c  enklume.c  enklume_adapter.c  nbt.c
shaders/: basic.frag  basic.vert  mesh_shader.mesh  mesh_shader.task
